Fix responsive container overflow

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -19,7 +19,7 @@
 
 @media only screen and (min-width: 414px) {
   .container {
-      width: 386px;
+      width: 95%;
   }
 }
 
