--- a/client/src/styles/FixedHeader.css
+++ b/client/src/styles/FixedHeader.css
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 414px) {
   .fixedContent {
-      width: 386px;
+      width: 95%;
   }
 }
 
